--- a/auto_examples/cgl/demonstrate_rsvd.html
+++ b/auto_examples/cgl/demonstrate_rsvd.html
@@ -173,7 +173,7 @@ equation. This script demonstrates the following:</p>
 <span class="n">V</span><span class="o">.</span><span class="n">destroy</span><span class="p">()</span>
 <span class="n">U</span><span class="o">.</span><span class="n">destroy</span><span class="p">()</span>
 
-
+<span class="n">res4py</span><span class="o">.</span><span class="n">petscprint</span><span class="p">(</span><span class="n">comm</span><span class="p">,</span> <span class="s2">&quot;Making figures...&quot;</span><span class="p">)</span>
 <span class="n">l</span> <span class="o">=</span> <span class="mi">30</span> <span class="o">*</span> <span class="mi">2</span>
 <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="o">-</span><span class="n">l</span> <span class="o">/</span> <span class="mi">2</span><span class="p">,</span> <span class="n">l</span> <span class="o">/</span> <span class="mi">2</span><span class="p">,</span> <span class="n">num</span><span class="o">=</span><span class="n">N</span><span class="p">,</span> <span class="n">endpoint</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 <span class="n">nu</span> <span class="o">=</span> <span class="mf">1.0</span> <span class="o">*</span> <span class="p">(</span><span class="mi">2</span> <span class="o">+</span> <span class="mf">0.4</span> <span class="o">*</span> <span class="mi">1</span><span class="n">j</span><span class="p">)</span>
