--- a/model_reduction.html
+++ b/model_reduction.html
@@ -171,12 +171,12 @@ When the linear operator <span class="math notranslate nohighlight">\(A\)</span>
 further manipulated into</p>
 <div class="math notranslate nohighlight">
 \[G_R = \frac{1}{\pi}\int_{0}^{\infty}R(\omega)BB^*R(\omega)^*\
-\,d\omega \approx \sum_j \delta_j w_j\left(X_\mathrm{r}(\omega_i)\
-X_\mathrm{r}(\omega)^* + X_{\mathrm{i}}(\omega_j)\
+\,d\omega \approx \sum_j \delta_j w_j\left(X_\mathrm{r}(\omega_j)\
+X_\mathrm{r}(\omega_j)^* + X_{\mathrm{i}}(\omega_j)\
     X_{\mathrm{i}}(\omega_j)^*\right),\]</div>
 <p>where the subscripts “r” and “i” denote the real and imaginary parts,
-and <span class="math notranslate nohighlight">\(\delta_j = 1\)</span> if <span class="math notranslate nohighlight">\(\omega_j = 0\)</span> and
-<span class="math notranslate nohighlight">\(\delta_j = 1/2\)</span> otherwise.</p>
+and <span class="math notranslate nohighlight">\(\delta_j = 1/2\)</span> if <span class="math notranslate nohighlight">\(\omega_j = 0\)</span> and
+<span class="math notranslate nohighlight">\(\delta_j = 1\)</span> otherwise.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
